Remove redundant dependency from application.properties